--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.4"
+    "@fontsource-variable/jetbrains-mono": "^5.2.8",
+    "@fontsource/road-rage": "^5.2.8",
+    "@tailwindcss/vite": "^4.1.17",
+    "astro": "^5.16.4",
+    "tailwindcss": "^4.1.17",
+    "tailwindcss-noise": "^1.0.6"
   }
 }
